--- a/chrome/popup.html
+++ b/chrome/popup.html
@@ -1,3 +1,17 @@
-<div>
-	<a href="http://www.jd.com">京东商城</a>
-</div>
+<html doctype="html5">
+	<head>
+		<meta charset="utf8"></meta>
+	</head>
+	<body>
+		<div class="popup-div">
+			<a href="https://www.jd.com">京东商城</a>
+		</div>
+	</body>
+</html>
+
+<style>
+	.popup-div {
+		width: 100px;
+	}
+
+</style>
