首页百度搜索功能开发

--- a/webs/index.html
+++ b/webs/index.html
@@ -5,6 +5,7 @@
         <title>handylink</title>
         <!-- 引入element-ui样式 -->
         <link rel="stylesheet" href="./libs/element-ui/element.css">
+        <link rel="stylesheet" href="./style/handylink.css">
         <!-- 引入vue -->
         <script src="./libs/vue/vue.js"></script>
         <!-- 引入vue-router -->
@@ -14,15 +15,6 @@
         <!-- 引入require -->
         <script data-main="./main.js" src="./libs/require.js"></script>
     </head>
-    <style>
-        .handylink-header {
-            width: 60%;
-            margin: 0 20%;
-        }
-        .handylink-header .header-element {
-            float: left;
-        }
-    </style>
     <body>
         <div id="app">
             <router-view></router-view>
