--- a/webs/home/index.html
+++ b/webs/home/index.html
@@ -1,16 +1,24 @@
 <el-container>
-    <el-header>
-        <el-row class="handylink-header">
-            <el-col :span="16">
-                <el-input placeholder="请输入网站" v-model="website">
-                    <template slot="prepend">https://www.</template>
-                    <template slot="append">.com</template>
+    <el-header class="handylink-header" style="height: 120px">
+        <el-row class="handylink-header-search">
+            <el-col :span="20">
+                <el-input
+                    placeholder="请输入搜索内容"
+                    v-model="searchText"
+                    @change="search">
                 </el-input>
             </el-col>
-            <el-col :offset="2" :span="6">
-                <el-button type="primary" @click="openUrl">打开</el-button>
+            <el-col :span="3" class="handylink-header-search-btn">
+                <el-button type="primary" @click="search">百度一下</el-button>
             </el-col>
         </el-row>
     </el-header>
-    <el-main>{{ url }}</el-main>
-</el-container> 
+    <el-main class="handylink-main">
+        <el-card>
+            <div slot="header" class="clearfix">
+                <span>卡片名称</span>
+                <el-button style="float: right; padding: 3px 0" type="text">操作按钮</el-button>
+            </div>
+        </el-card>
+    </el-main>
+</el-container>
