添加程序员专属导航区块

--- a/webs/explore/me/me.html
+++ b/webs/explore/me/me.html
@@ -29,8 +29,8 @@
                     <span>170cm</span>
                 </div>
                 <div style="line-height: 50px;">
-                    <label>政治面貌：</label>
-                    <span>老百姓</span>
+                    <label>籍贯：</label>
+                    <span>河南</span>
                 </div>
                 <div style="line-height: 50px;">
                     <label>邮箱：</label>
