完善首页功能

--- a/webs/explore/explore.html
+++ b/webs/explore/explore.html
@@ -7,12 +7,12 @@
             <el-menu-item index="2">
                 <router-link to="/explore/todo">待开发功能</router-link>
             </el-menu-item>
-            <el-menu-item index="3">
+            <!-- <el-menu-item index="3">
                 <router-link to="/explore/alipay">支付宝付款</router-link>
             </el-menu-item>
             <el-menu-item index="4">
                 <router-link to="/explore/wxpay">微信付款</router-link>
-            </el-menu-item>
+            </el-menu-item> -->
         </el-menu>
     </el-aside>
     <el-main style="height: 100%">
