--- a/webs/home/index.html
+++ b/webs/home/index.html
@@ -21,8 +21,10 @@
                 <el-button style="float: right; padding: 3px 0" type="text">更多</el-button>
             </div>
             <el-row v-for="row_news in links.news">
-                <el-col v-for="(link, index) in row_news" style="text-align: center;" :span="4">
-                    <a :href='link.href'>{{ link.name }}</a>
+                <el-col v-for="(link, index) in row_news" :key="index" style="text-align: center;" :span="4">
+                    <el-tooltip :content="link.tips" effect="light" :disabled="!link.tips">
+                        <a :href='link.href'>{{ link.name }}</a>
+                    </el-tooltip>
                 </el-col>
             </el-row>
         </el-card>
@@ -33,8 +35,24 @@
                 <el-button style="float: right; padding: 3px 0" type="text">更多</el-button>
             </div>
             <el-row v-for="row_news in links.tech">
-                <el-col v-for="(link, index) in row_news" style="text-align: center;" :span="4">
-                    <a :href='link.href'>{{ link.name }}</a>
+                <el-col v-for="(link, index) in row_news" :key="index" style="text-align: center;" :span="4">
+                    <el-tooltip :content="link.tips" effect="light" :disabled="!link.tips">
+                        <a :href='link.href'>{{ link.name }}</a>
+                    </el-tooltip>
+                </el-col>
+            </el-row>
+        </el-card>
+        <!-- 办公 -->
+        <el-card style="margin-top: 20px;">
+            <div slot="header" class="clearfix">
+                <span>办公</span>
+                <el-button style="float: right; padding: 3px 0" type="text">更多</el-button>
+            </div>
+            <el-row v-for="row_news in links.office">
+                <el-col v-for="(link, index) in row_news" :key="index" style="text-align: center;" :span="4">
+                    <el-tooltip :content="link.tips" effect="light" :disabled="!link.tips">
+                        <a :href='link.href'>{{ link.name }}</a>
+                    </el-tooltip>
                 </el-col>
             </el-row>
         </el-card>
@@ -45,10 +63,18 @@
                 <el-button style="float: right; padding: 3px 0" type="text">更多</el-button>
             </div>
             <el-row v-for="row_news in links.programer">
-                <el-col v-for="(link, index) in row_news" style="text-align: center;" :span="4">
-                    <a :href='link.href'>{{ link.name }}</a>
+                <el-col v-for="(link, index) in row_news" :key="index" style="text-align: center;" :span="4">
+                    <el-tooltip :content="link.tips" effect="light" :disabled="!link.tips">
+                        <a :href='link.href'>{{ link.name }}</a>
+                    </el-tooltip>
                 </el-col>
             </el-row>
         </el-card>
     </el-main>
+    <el-footer>
+        <div class="handylink-footer">
+            <router-link to="/explore/todo">探索功能</router-link>
+            <router-link to="/explore/">关于我</router-link>
+        </div>
+    </el-footer>
 </el-container>
