--- a/webs/index.html
+++ b/webs/index.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>handylink</title>
+        <link type="favicon" rel="shortcut icon" href="./images/favicon.ico" />
         <!-- 引入element-ui样式 -->
         <link rel="stylesheet" href="./libs/element-ui/element.css">
         <link rel="stylesheet" href="./style/handylink.css">
