--- a/webs/index.html
+++ b/webs/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>handylink</title>
+        <title>我要成为你最常用的网站导航 -- handylink</title>
         <link type="favicon" rel="shortcut icon" href="./images/favicon.ico" />
         <!-- 引入element-ui样式 -->
         <link rel="stylesheet" href="./libs/element-ui/element.css">
