实现返回顶部功能

--- a/webs/index.html
+++ b/webs/index.html
@@ -20,5 +20,11 @@
         <div id="app">
             <router-view></router-view>
         </div>
+        <div id="scrollTop" class="handylink-scroll">
+            <img src="images/top.png"
+                onclick="JavaScript:window.scrollTo(0,0)"
+                onmouseover="JavaScript:this.src='images/top_hover.png'"
+                onmouseout="JavaScript:this.src='images/top.png'">
+        </div>
     </body>
 </html>
