web storage 学习and示例开发

--- a/webs/index.html
+++ b/webs/index.html
@@ -4,9 +4,10 @@
         <meta charset="utf-8">
         <title>我要成为你最常用的网站导航 -- handylink</title>
         <link type="favicon" rel="shortcut icon" href="./images/favicon.ico" />
+        <link rel="stylesheet" href="./style/common.css">
+        <link rel="stylesheet" href="./style/handylink.css">
         <!-- 引入element-ui样式 -->
         <link rel="stylesheet" href="./libs/element-ui/element.css">
-        <link rel="stylesheet" href="./style/handylink.css">
         <!-- 引入vue -->
         <script src="./libs/vue/vue.js"></script>
         <!-- 引入vue-router -->
