--- a/webs/explore/explore.html
+++ b/webs/explore/explore.html
@@ -1,17 +1,20 @@
 <el-container style="height: 100%">
     <el-aside width="220px" style="height: 100%">
         <el-menu style="height: 100%">
-            <el-menu-item index="1">
-                <router-link to="/explore/">关于我</router-link>
-            </el-menu-item>
-            <el-menu-item index="2">
-                <router-link to="/explore/todo">待开发功能</router-link>
+            <el-menu-item index="0">
+                <router-link to="/home">首页</router-link>
             </el-menu-item>
             <el-menu-item index="3">
                 <router-link to="/explore/storage">Web Storage</router-link>
             </el-menu-item>
             <el-menu-item index="4">
                 <router-link to="/explore/area">Map&Area</router-link>
+            </el-menu-item>
+            <el-menu-item index="2">
+                <router-link to="/explore/todo">待开发功能</router-link>
+            </el-menu-item>
+            <el-menu-item index="1">
+                <router-link to="/explore/">关于我</router-link>
             </el-menu-item>
         </el-menu>
     </el-aside>
