--- a/webs/explore/area/area.html
+++ b/webs/explore/area/area.html
@@ -2,6 +2,7 @@
     <img src="images/area_test.jpg" usemap="#areaDemo"/>
     <map id="areaDemo" name="areaDemo" >
         <area alt="circle1" shape="circle" coords="88,228,45" href="#/explore/todo"/>
-        <area alt="circle2" shape="circle" coords="254,238,65" href="#/explore/todo"/>
+        <area alt="circle2" shape="circle" coords="254,238,65" href="#/explore/me"/>
+        <area alt="circle2" shape="rect" coords="813, 30, 980, 80" href="#/home"/>
     </map>
 </div>
