修改session页面样式

--- a/webs/explore/session/session.html
+++ b/webs/explore/session/session.html
@@ -3,18 +3,18 @@
         <span>参考文档：</span>
         <a href="https://www.npmjs.com/package/express-session">express-session</a>
     </div>
-    <el-form>
+    <el-form label-width="100px" class="handylink-session-form">
         <el-form-item label="用户名：">
             <el-input v-model="userinfo.username"></el-input>
         </el-form-item>
         <el-form-item label="密  码：">
             <el-input v-model="userinfo.password"></el-input>
         </el-form-item>
+        <el-form-item>
+            <el-button @click="clear">清 空</el-button>
+            <el-button type="primary" @click="login">登 陆</el-button>
+            <el-button type="primary" @click="logout">退 出</el-button>
+        </el-form-item>
     </el-form>
-    <span slot="footer" class="dialog-footer">
-        <el-button @click="clear">清 空</el-button>
-        <el-button type="primary" @click="login">登 陆</el-button>
-        <el-button type="primary" @click="logout">退 出</el-button>
-    </span>
 </div>
 
