添加【关于网站】功能

--- a/webs/home/index.html
+++ b/webs/home/index.html
@@ -75,6 +75,7 @@
         <div class="handylink-footer">
             <router-link to="/explore/todo">探索功能</router-link>
             <router-link to="/explore/">关于我</router-link>
+            <router-link to="/about">关于网站</router-link>
         </div>
     </el-footer>
 </el-container>
