添加用户注册模块

--- a/webs/home/index.html
+++ b/webs/home/index.html
@@ -13,7 +13,7 @@
                         </el-dropdown-menu>
                     </el-dropdown>
                 </span>
-                <span class="float-right" v-else>你好，请<a href="/#/explore/session">登陆</a></span>
+                <span class="float-right" v-else>你好，请<a href="/#/explore/session">登陆</a>或<a href="/#/user/register">注册</a></span>
             </div>
         </el-row>
         <el-row class="handylink-header-search">
