--- a/webs/explore/session/session.html
+++ b/webs/explore/session/session.html
@@ -13,7 +13,8 @@
         <el-form-item>
             <el-button @click="clear">清 空</el-button>
             <el-button type="primary" @click="login">登 陆</el-button>
-            <el-button type="primary" @click="logout">退 出</el-button>
+            <!-- <el-button type="primary" @click="logout">退 出</el-button> -->
+            <el-button type="primary" @click="register">注 册</el-button>
         </el-form-item>
     </el-form>
 </div>
