添加用户管理页面

--- a/webs/explore/session/session.html
+++ b/webs/explore/session/session.html
@@ -8,7 +8,7 @@
             <el-input v-model="userinfo.username"></el-input>
         </el-form-item>
         <el-form-item label="密  码：">
-            <el-input v-model="userinfo.password"></el-input>
+            <el-input v-model="userinfo.password" type="password"></el-input>
         </el-form-item>
         <el-form-item>
             <el-button @click="clear">清 空</el-button>
