--- a/webs/explore/explore.html
+++ b/webs/explore/explore.html
@@ -4,6 +4,9 @@
             <el-menu-item index="0">
                 <router-link to="/home">首页</router-link>
             </el-menu-item>
+                <el-menu-item index="6">
+                <router-link to="/user/manage">用户管理</router-link>
+            </el-menu-item>
             <el-menu-item index="5">
                 <router-link to="/explore/session">Session</router-link>
             </el-menu-item>
