--- a/webs/user/manage.html
+++ b/webs/user/manage.html
@@ -4,6 +4,11 @@
         <el-table-column prop="username" label="用户名" width="180"></el-table-column>
         <el-table-column prop="sex" label="性别"> </el-table-column>
         <el-table-column prop="cellNumber" label="电话号码"> </el-table-column>
-        <el-table-column label="操作"> </el-table-column>
+        <el-table-column label="操作">
+            <template slot-scope="scope">
+                <el-button @click="editUser(scope.row)" type="text" size="small">编辑</el-button>
+                <el-button @click="deleteUser(scope.row)" type="text" size="small" v-if="!cannotDeleteUsers.includes(scope.row.username)">删除</el-button>
+            </template>
+        </el-table-column>
     </el-table>
 </el-container>
