--- a/webs/user/group/list.html
+++ b/webs/user/group/list.html
@@ -1,6 +1,6 @@
 <el-container style="width: 100%; padding: 0 10%">
     <el-table :data="tableDatas">
-        <el-table-column prop="id" label="ID" width="180"> </el-table-column>
+        <el-table-column prop="id" label="索引" width="180"> </el-table-column>
         <el-table-column prop="username" label="用户名" width="180"></el-table-column>
         <el-table-column prop="sex" label="性别"> </el-table-column>
         <el-table-column prop="cellNumber" label="电话号码"> </el-table-column>
